sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/AI_Execution__c.object-meta.xml
<CustomObject>
    <description>Audit log of each AI Workflow execution. Immutable once created — no update/delete permissions for non-admins.</description>
    <label>AI Execution</label>
    <nameField>
        <displayFormat>EXEC-{0000000}</displayFormat>
        <label>Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>