sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/AI_Workflow__c.field-meta.xml
<CustomField>
    <fullName>AI_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Workflow</label>
    <referenceTo>AI_Workflow__c</referenceTo>
    <relationshipLabel>AI Executions</relationshipLabel>
    <relationshipName>AI_Executions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>