sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/Context_JSON__c.field-meta.xml
<CustomField>
    <fullName>Context_JSON__c</fullName>
    <description>Serialized execution context passed between steps. Encrypted at rest via platform encryption.</description>
    <label>Context JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>