sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Initiated AI Executions</relationshipLabel>
    <relationshipName>Initiated_AI_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>