sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/Mongo_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>Mongo_Execution_Id__c</fullName>
    <label>MongoDB Execution ID</label>
    <description>24-character hex ID linking this Salesforce record to its MongoDB execution document. Used for dual-write correlation.</description>
    <type>Text</type>
    <length>24</length>
</CustomField>