sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/Parent_Execution__c.field-meta.xml
<CustomField>
    <fullName>Parent_Execution__c</fullName>
    <label>Parent Execution</label>
    <referenceTo>AI_Execution__c</referenceTo>
    <relationshipLabel>Child Executions</relationshipLabel>
    <relationshipName>Child_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>