sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>RUNNING</fullName>
                <label>Running</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>RETRYING</fullName>
                <label>Retrying</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>