sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/Total_Tokens_Used__c.field-meta.xml
<CustomField>
    <fullName>Total_Tokens_Used__c</fullName>
    <label>Total Tokens Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>