sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <label>Trigger Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>