sf-ai-orchestrator/force-app/main/default/objects/AI_Execution__c/fields/Trigger_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Record_Id__c</fullName>
    <description>18-char Salesforce ID of the record that triggered this execution</description>
    <label>Trigger Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>